compiler/tests/errortests/arithmetic-left-shift-string.txt
FILENAME:4:25: error: Could not determine type of initial value for variable 'result'.
    let result : i32 = x << s;  // Error: left shift requires integer types
                         ^
FILENAME:4:25: error: Operator '__lshift__' is not overloaded for struct type 'string'.
    let result : i32 = x << s;  // Error: left shift requires integer types
                         ^
